add favicon and fix last updated date

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
   </div>
 
   <div class="kicker">
-    <p>Each black box represents 1000 rooms</p>
+    <p>Each black box represents 1000 rooms. Numbers last updated April 19, 2020.</p>
   </div>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
