--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 <body>
   <div class="header">
     <h1>Project Roomkey Status for LA County</h1>
-    <h2><span class="yellow">546 Rooms Occupied</span> of <span class="green">1,827 Rooms Contracted</span> of 15,000 Rooms Promised</h2>
+    <h2><span class="occupied">546 Rooms Occupied</span> of <span class="contracted">1,827 Rooms Contracted</span> of 15,000 Rooms Promised</h2>
     <h3>58,936 people are documented as experiencing homelessness in LA County</h3>
   </div>
 
-  <div class="hotel-master">
+<div class="chart">
+  <iframe seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
+</div>
+
+  <!-- <div class="hotel-master">
     <svg xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 72 42">
 
@@ -391,10 +395,10 @@
        <use xlink:href="#hotel-not-contracted" x="45" y="30"/>
        <use xlink:href="#hotel-not-contracted" x="60" y="30"/>
       </svg>
-  </div>
+  </div> -->
 
   <div class="kicker">
-    <p>Each black box represents 1000 rooms. Numbers last updated April 19, 2020.</p>
+    <p>Numbers last updated April 20, 2020.</p>
   </div>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
