--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="header">
     <h1>Project Roomkey Tracker</h1>
     <h3>Tracking progress towards the promise of hotel rooms for unsheltered Californians</h3>
-    <a href="https://twitter.com/projectroomkey?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @projectroomkey</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/roomkeytracker?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @roomkeytracker</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
   <div class="los-angeles">
