update language methodology and email

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <p>Out of 15,000 rooms promised, 698 rooms are currently operational</p>
+      <p>Out of 15,000 rooms promised, 749 rooms are currently operational</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
@@ -40,12 +40,12 @@
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
     </div>
     <div class="updated">
-      <p class="paragraph-small">Numbers last updated April 20, 2020.</p>
+      <p class="paragraph-small">Numbers last updated April 22, 2020. Projection is using a moving average of the past two days.</p>
     </div>
   </div>
 
   <footer>
-    <p class="paragraph-small">Data based on County-reported numbers. Contact <a href="mailto:data@novacancyca.org">data@novacancyca.org</a> for more info.</p>
+    <p class="paragraph-small">If charts do not load, you can see them <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&format=interactive">here</a> and <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&format=interactive">here</a>. Data based on County-reported numbers. Contact <a href="mailto:data@projectroomkeytracker.com">data@projectroomkeytracker.com</a> for more info.</p>
   </footer>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
