update meta data

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project Roomkey - LA County Status</title>
-  <meta name="description" content="">
+  <title>Project Roomkey Tracker</title>
+  <meta name="description" content="Tracking progress towards the promise of hotel rooms for unsheltered Californians also known as Project Roomkey">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
