--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <p>Out of 15,000 rooms promised, 749 rooms are currently operational</p>
+      <p>Out of 15,000 rooms promised, 864 rooms are occupied as of April 23</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
@@ -40,7 +40,7 @@
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
     </div>
     <div class="updated">
-      <p class="paragraph-small">Numbers last updated April 22, 2020. Projection is using a moving average of the past two days.</p>
+      <p class="paragraph-small">Numbers last updated April 23, 2020. Projection is using a logarithmic trend.</p>
     </div>
   </div>
 
