--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <p>Out of 15,000 rooms promised, 864 rooms are occupied as of April 23</p>
+      <p>Out of 15,000 rooms promised, 1224 rooms are occupied as of April 23</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
     </div>
     <div>
-      <p>At this rate, we will reach 15,000 rooms contracted around August 15, 2020</p>
+      <p>At this rate, we will reach 15,000 rooms operational around January 1, 2021</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
