--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <p>Out of 15,000 rooms promised, 2,728 rooms are operational as of May 15</p>
+      <p>Out of 15,000 rooms promised, 2,728 rooms are operational as of May 18</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
     </div>
     <div>
-      <p>At this rate, we will reach 15,000 rooms operational around December 15, 2020</p>
+      <p>At this rate, we will reach 15,000 rooms operational between December 1-15, 2020</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
     </div>
     <div class="updated">
-      <p class="paragraph-small">Numbers last updated May 15, 2020. Projection is using a logarithmic trend.</p>
+      <p class="paragraph-small">Numbers last updated May 18, 2020. Projection is using a logarithmic trend.</p>
     </div>
   </div>
 
