updating room count and projection text

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <p>Out of 15,000 rooms promised, 4,030 rooms are operational as of <span data-last-updated="short"></span>.</p>
+      <p>Out of 15,000 rooms promised, 3,901 rooms are operational as of <span data-last-updated="short"></span>.</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
     </div>
     <div>
-      <p>We can no longer predict when or if we would reach the goal of 15,000 rooms as the County has slowed the contracting of rooms.</p>
+      <p>The below projection for reaching the goal of 15,000 rooms has been deprecated since the program is ending.</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
