--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
     </div>
-    <div>
-      <p>The below projection for reaching the goal of 15,000 rooms has been deprecated since the program is ending.</p>
-    </div>
-    <div class="chart">
+    <!-- <div>
+      <p>We have deprecated our projection since it has been announced that the program is ending.</p>
+    </div> -->
+    <!-- <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
-    </div>
+    </div> -->
     <div class="updated">
-      <p class="paragraph-small">Numbers last updated <span data-last-updated="long"></span>. Projection is using a logarithmic trend.</p>
+      <p class="paragraph-small">Numbers last updated <span data-last-updated="long"></span>. We have deprecated our projection since it has been announced that the program is ending.</p>
     </div>
   </div>
 
   <footer>
-    <p class="paragraph-small">If charts do not load, you can see them <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&format=interactive">here</a> and <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&format=interactive">here</a>. Data based on County-reported numbers. Contact <a href="mailto:data@projectroomkeytracker.com">data@projectroomkeytracker.com</a> for more info.</p>
+    <p class="paragraph-small">If chart does not load, you can see it <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&format=interactive">here</a>. Data based on <a href="https://covid19.lacounty.gov/incident-updates/" target=_blank>County-reported numbers</a>. Contact <a href="mailto:data@projectroomkeytracker.com">data@projectroomkeytracker.com</a> for more info.</p>
   </footer>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
