fixing count on page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="los-angeles">
     <div class="los-angeles intro">
       <h2>Los Angeles County</h2>
-      <!-- <p>Out of 15,000 rooms promised, 2,196 rooms are operational as of <span data-last-updated="short"></span>.</p> -->
+      <p>Information last updated <span data-last-updated="short"></span>, 2021</p>
     </div>
     <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=2109958021&amp;format=interactive"></iframe>
@@ -39,9 +39,9 @@
     <!-- <div class="chart">
       <iframe width="698.5" height="431.40958166053304" seamless frameborder="0" scrolling="yes" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQy6BHS9DBc16QTb6Sec-axAw_mIimGpxOouu5ZN4uGz_JSBhlGAPrtkiV_AKGUJSf0p45Fswg89rHg/pubchart?oid=774564465&amp;format=interactive"></iframe>
     </div> -->
-    <div class="updated">
+    <!-- <div class="updated">
       <p class="paragraph-small">Numbers last updated <span data-last-updated="long"></span>. We have deprecated our projection since it has been announced that the program is ending.</p>
-    </div>
+    </div> -->
   </div>
 
   <footer>
